--- a/style.css
+++ b/style.css
@@ -28,8 +28,6 @@ display:flex;
 width:100%;
 justify-content: space-between;
 align-items: center;
-background: darkslategray;
-border-radius:10px;
 padding:50px 20px;
 }
 .col{
@@ -40,12 +38,12 @@ text-align: center;
 font-size: 15px;
 font-weight: 500;
 margin-bottom: 10px;
-color: #fff;
+color: darkslategray
 }
 .col input{
 width:150px;
 height:30px;
-background: white;
+background:#74992e;
 border-radius:5px;
 text-align:center;
 }
